# woyta_pad_fw

./: .gitignore  .gitmodules  CMakeLists.txt
core/: encoder.c  encoder.h  keycodes.h  main.c  matrix.c  matrix.h  tusb_config.h  usb_descriptors.c
keyboards/woyta-pad/: keyboard.json  keymap.c
tools/: generate_config.py
